--- a/index.html
+++ b/index.html
@@ -246,13 +246,13 @@ Version: 1.0
       }
 
       #portrait {
-        background-image: url("/images/portret_.jpg");
+        background-image: url("portret_.jpg");
       }
       #langBtnPL {
-        background-image: url("/images/National_Flag_of_Poland.png");
+        background-image: url("National_Flag_of_Poland.png");
       }
       #langBtnEN {
-        background-image: url("/images/united-kingdom-flag-icon.png");
+        background-image: url("united-kingdom-flag-icon.png");
       }
     </style>
   </head>
@@ -315,25 +315,25 @@ Version: 1.0
           <h2>Technologie</h2>
           <ul>
             <li>
-              <img src="/images/HTML5_Logo_512.png" alt="HTML5" />
+              <img src="HTML5_Logo_512.png" alt="HTML5" />
             </li>
             <li>
-              <img src="/images/img_css (2).png" alt="CSS3" />
+              <img src="img_css (2).png" alt="CSS3" />
             </li>
             <li>
-              <img src="/images/boot _logo.png" alt="Bootstrap 5" />
+              <img src="boot _logo.png" alt="Bootstrap 5" />
             </li>
             <li>
-              <img src="/images/js_logo.png" alt="JavaScript" />
+              <img src="js_logo.png" alt="JavaScript" />
             </li>
             <li>
-              <img src="/images/jQuery-logo.png" alt="jQuery" />
+              <img src="jQuery-logo.png" alt="jQuery" />
             </li>
             <li>
-              <img src="/images/php _logo.png" alt="php" />
+              <img src="php _logo.png" alt="php" />
             </li>
             <li>
-              <img src="/images/wp_logo.png" alt="WordPress" />
+              <img src="wp_logo.png" alt="WordPress" />
             </li>
           </ul>
         </section>
@@ -381,25 +381,25 @@ Version: 1.0
           <h2>Technologies</h2>
           <ul>
             <li>
-              <img src="/images/HTML5_Logo_512.png" alt="HTML5" />
+              <img src="HTML5_Logo_512.png" alt="HTML5" />
             </li>
             <li>
-              <img src="/images/img_css (2).png" alt="CSS3" />
+              <img src="img_css (2).png" alt="CSS3" />
             </li>
             <li>
-              <img src="/images/boot _logo.png" alt="Bootstrap 5" />
+              <img src="boot _logo.png" alt="Bootstrap 5" />
             </li>
             <li>
-              <img src="/images/js_logo.png" alt="JavaScript" />
+              <img src="js_logo.png" alt="JavaScript" />
             </li>
             <li>
-              <img src="/images/jQuery-logo.png" alt="jQuery" />
+              <img src="jQuery-logo.png" alt="jQuery" />
             </li>
             <li>
-              <img src="/images/php _logo.png" alt="php" />
+              <img src="php _logo.png" alt="php" />
             </li>
             <li>
-              <img src="/images/wp_logo.png" alt="WordPress" />
+              <img src="wp_logo.png" alt="WordPress" />
             </li>
           </ul>
         </section>
@@ -412,7 +412,7 @@ Version: 1.0
       <p>w.galik@poczta.fm</p>
       <p>
         <a href="https://github.com/wgalik?tab=repositories"
-          ><img src="/images/github-mark.svg" alt="GitHub"
+          ><img src="github-mark.svg" alt="GitHub"
         /></a>
       </p>
     </footer>
