--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ Version: 1.0
         box-shadow: -1px 0px 2px 0px #fff inset;
         cursor: pointer;
         top: 10px;
-        right: 10px;
+        left: 10px;
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -148,8 +148,8 @@ Version: 1.0
         box-shadow: none;
         color: goldenrod;
         font-size: 20px;
-        top: 10px;
-        left: 10px;
+        top: 5px;
+        left: 35px;
       }
       #day {
         display: none;
@@ -230,6 +230,8 @@ Version: 1.0
       li {
         flex: 1;
         list-style: none;
+        display: flex;
+        justify-content: center;
       }
       li img {
         max-height: 50px;
@@ -256,7 +258,7 @@ Version: 1.0
       }
 
       footer img {
-        margin: 0 auto;
+        display: inline;
         height: 30px;
         transition: transform 0.1s ease-in-out;
       }
